add ranger config

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -57,7 +57,7 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware false
+set vcs_aware true
 
 # State of the four backends git, hg, bzr, svn. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -71,7 +71,7 @@ set vcs_backend_svn disabled
 set vcs_msg_length 50
 
 # Use one of the supported image preview protocols
-set preview_images false
+set preview_images true
 
 # Set the preview image method. Supported methods:
 #
@@ -114,7 +114,9 @@ set preview_images false
 #   Preview images in full color with the external command "ueberzug".
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
-set preview_images_method w3m
+
+# set preview_images_method w3m
+set preview_images_method ueberzug
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
@@ -140,6 +142,7 @@ set show_hidden_bookmarks true
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
 set colorscheme default
+# set colorscheme snow
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
@@ -320,6 +323,7 @@ set nested_ranger_warning true
 # Examples:
 # setlocal path=~/downloads sort mtime
 
+
 # ===================================================================
 # == Command Aliases in the Console
 # ===================================================================
@@ -344,6 +348,10 @@ alias travel     scout -aefklst
 # ===================================================================
 # == Define keys for the browser
 # ===================================================================
+
+# custom
+map <C-v> console shell nvim%space
+# map CW 
 
 # Basic
 map     Q quitall
@@ -433,10 +441,14 @@ copymap <END>      G
 copymap <PAGEDOWN> <C-F>
 copymap <PAGEUP>   <C-B>
 
-map J  move down=0.5  pages=True
-map K  move up=0.5    pages=True
-copymap J <C-D>
-copymap K <C-U>
+# map J  move down=0.5  pages=True
+# map K  move up=0.5    pages=True
+map J move down=5
+map K move up=5
+
+
+# copymap J <C-D>
+# copymap K <C-U>
 
 # Jumping around
 map H     history_go -1
@@ -477,7 +489,9 @@ map y. yank name_without_extension
 # Filesystem Operations
 map =  chmod
 
-map cw console rename%space
+map cw eval fm.execute_console("bulkrename") if fm.thisdir.marked_items else fm.open_console("rename ")
+# map cw console rename%space
+# map CW console bulkrename
 map a  rename_append
 map A  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"))
 map I  eval fm.open_console('rename ' + fm.thisfile.relative_path.replace("%", "%%"), position=7)
@@ -757,3 +771,25 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+
+
+
+# ==========================
+# ==== my custom config ====
+# ==========================
+# show file icons
+default_linemode devicons2
+
+# search
+map <C-f> fzf_select
+map f console scout -ftsea%space
+
+# compress
+map C console compress%space
+map X console extracthere%space
+
+# move files to ranger trash
+# map DD shell mv -i %s ~/.local/share/Trash/files/ && echo "trashed %s        from_dir $(pwd)" >> ~/.config/ranger/trash_history
+# map uD shell fileToRestore=$(cat ~/.config/ranger/trash_history | grep "^trashed" | tail -n 1 | cut -c10- | awk -F"from_dir " '{print $1}' | rev | cut -c10- | rev) && mv -i ~/.local/share/Trash/files/"$fileToRestore" "$fileToRestore"1. 1.  && echo "         untrashed $(pwd)/"$fileToRestore"" >> ~/.config/ranger/trash_history && unset fileToRestore
+# map Dh shell less ~/.config/ranger/trash_history
